--- a/styles/style.css
+++ b/styles/style.css
@@ -78,10 +78,11 @@ header h1 {
 }
 
 .deals {
-  padding: 70px 0 120px 0;
+  margin-bottom: 120px;
   font-family: Inter;
   text-align: center;
   text-transform: uppercase;
+  margin-top: 20px;
 }
 
 .deals h2 {
@@ -90,9 +91,14 @@ header h1 {
   margin-bottom: 48px;
 }
 .deals h4 {
-  color: #ff0000;
-  font-size: 24px;
   margin-bottom: 16px;
+  color: #f00;
+  text-align: center;
+  font-family: Inter;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
 }
 .deals h3 {
   color: #070211;
@@ -104,7 +110,7 @@ header h1 {
   background-image: url('../images/Vectorrr.png');
   background-size: 100%;
   background-repeat: no-repeat;
-  padding: 120px 130px;
+  padding: 120px 130px 0;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -119,29 +125,35 @@ header h1 {
 }
 
 .midnight-party h2 {
+  margin-bottom: 25px;
   color: #fff;
   font-family: Merriweather;
   font-size: 64px;
+  font-style: normal;
   font-weight: 900;
-  margin-bottom: 25px;
+  /* line-height: 88px; 137.5% */
+  letter-spacing: 7.04px;
 }
 .midnight-party p {
+  margin-bottom: 50px;
   color: rgba(255, 255, 255, 0.8);
   font-family: Inter;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
-  margin-bottom: 50px;
+  line-height: 30px; /* 166.667% */
 }
 
 .midnight-party button {
   background: transparent;
   border: 0;
   color: #fff;
+  text-align: center;
   font-family: Inter;
   font-size: 20px;
   font-style: normal;
   font-weight: 700;
+  line-height: normal;
   text-transform: uppercase;
 }
 
@@ -374,6 +386,17 @@ header h1 {
 }
 .news-letter img {
   margin-bottom: 40px;
+}
+
+.news-letter-text-content {
+  color: rgba(7, 2, 17, 0.6);
+  text-align: center;
+  font-family: Inter;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 32px; /* 160% */
+  margin-bottom: 50px;
 }
 
 .news-letter form {
